0.24.3	UNRELEASED

 * Add support for ``GIT_TRACE`` environment variable for debugging. Supports
   output to stderr (values "1", "2", or "true"), file descriptors (3-9),
   file paths, and directories (creates per-process trace files).
   (Jelmer Vernooĳ, #1863)

 * Add ``extract_signature()`` method to ``Commit`` and ``Tag`` classes that
   returns (payload, signature, signature_type) tuple. Supports both PGP and SSH
   signature detection. (Jelmer Vernooĳ)

 * Fix Git filter protocol implementation to properly handle the two-phase
   response format (initial headers, content, final headers) as specified in
   the Git protocol documentation. This fixes compatibility with Git LFS and
   other filters that send status messages in final headers.
   (Jelmer Vernooĳ, #1889)

 * Add ``git worktree repair`` command to repair worktree administrative files
   after worktrees or the main repository have been moved.
   (Jelmer Vernooĳ, #1799)

0.24.2	2025-09-25

 * Added ``porcelain.shortlog`` function to summarize commits by author,
   similar to git shortlog. (Muhammad Usama, #1693)

 * Fix merge functionality to gracefully handle missing optional merge3 dependency
   by raising informative ImportError with installation instructions.
   (Jelmer Vernooĳ, #1759)

 * Fix worktree CLI tests to properly change to repository directory.
   (Jelmer Vernooĳ, #1738)

 * Add ``temporary_worktree`` context manager for creating temporary worktrees
   that are automatically cleaned up. (Jelmer Vernooĳ)

 * Add ``exist_ok`` parameter to ``add_worktree`` to allow creation with
   existing directories. (Jelmer Vernooĳ)

 * Add colorized diff support for the ``show`` command with ``--color``
   argument. (Jelmer Vernooĳ, #1741)

 * Fix Windows path handling in ``_ensure_parent_dir_exists`` to correctly
   handle drive letters during checkout operations. (Jelmer Vernooĳ, #1751)

 * Fix Windows config loading to only use current Git config path,